[package]
name = "mtask"
version = "0.1.0"
edition = "2021"
about = "something something"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
clap = {version="4.0.22", features=["derive"]} 

[dev-dependencies]
assert_cmd = "2.0.6"
predicates = "2.1.3"
tempdir = "0.3.7"

